--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
 
     <body>
-        <p>Hello world!</p>
+        <p title="This is some website content!" style="color:red">Hello world!</p>
     </body>
 </html>
