--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     </head>
 
     <body>
+        <section>
+            <h2>Latest posts</h2>
+            <h3>Here you can see all the latest posts</h3>
+            <article>
+                <h4>This is the post title</h4>
+                <p>This is some content inside the post.</p>
+                <h5>Author: Daniel</h5>
+            </article>
+            <article>
+                <h4>This is the post title</h4>
+                <p>This is some content <br> inside the the post.</p>
+                <h5>Author: Daniel</h5>
+            </article>
+        </section>
         <p title="This is some website content!" style="color:red">Hello world!</p>
     </body>
 </html>
