--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Hello world!</title>
+        <style>
+            h2{color: red;
+            font-size: 70px;
+            margin: 0px;
+            background-color: blue;
+            text-align: center;}
+
+            p{color: #ffffff;
+            background-color: rgb(0, 0, 0);}
+
+        </style>
     </head>
 
     <body>
