--- a/index.html
+++ b/index.html
@@ -3,23 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Hello world!</title>
-        <style>
-            h2{color: red;
-            font-size: 70px;
-            margin: 0px;
-            background-color: blue;
-            text-align: center;}
-
-            p{color: #ffffff;
-            background-color: rgb(0, 0, 0);}
-
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+        <h2>This is the title</h2>
+        <p>lorem ipsum</p>
+
         <div>
             <h2>This is the title</h2>
-            <p>lorem ipsum</p>
         </div>
+    
     </body>
 </html>
