--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     </head>
 
     <body>
+        <!--This is the main content-->
         <h2>This is the title</h2>
         <p>lorem ipsum</p>
-
-        <div>
-            <h2>This is the title</h2>
-        </div>
-    
     </body>
 </html>
